[package]
name = "nil-circ"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.7.0"
clap = { version = "4.5.32", features = ["derive"] }
curve25519-dalek = "4.1.3"
hex = "0.4.3"
rand = "0.8.5"

fancy-garbling = {git = "https://github.com/GaloisInc/swanky.git", branch = "dev"}
ocelot = {git = "https://github.com/GaloisInc/swanky.git", branch = "dev"}
scuttlebutt = {git = "https://github.com/GaloisInc/swanky.git", branch = "dev"}
