[package]
name = "solve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.7.0"
clap = { version = "4.5.32", features = ["derive"] }
curve25519-dalek = "4.1.3"
hex = "0.4.3"
rand = "0.8.5"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
subtle = "2.5.0"

fancy-garbling = {git = "https://github.com/GaloisInc/swanky.git", branch = "dev"}
ocelot = {git = "https://github.com/GaloisInc/swanky.git", branch = "dev"}
scuttlebutt = {git = "https://github.com/GaloisInc/swanky.git", branch = "dev"}
